tests/ui/imports/shadow-glob-module-resolution-4.stderr
error: cannot determine resolution for the import
  --> $DIR/shadow-glob-module-resolution-4.rs:13:5
   |
LL | use b::C as e;
   |     ^^^^^^^^^

error: cannot determine resolution for the import
  --> $DIR/shadow-glob-module-resolution-4.rs:13:5
   |
LL | use b::C as e;
   |     ^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0432]: unresolved import `b::C`
  --> $DIR/shadow-glob-module-resolution-4.rs:13:5
   |
LL | use b::C as e;
   |     ^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
